# inventory-application

./: .gitignore  app.py  config.py  pyproject.toml
app/: __init__.py  routes.py
app/categories/: forms.py  routes.py
app/db/: connection.py  init_db.py  models.py  queries.py
app/errors/: handlers.py
app/forms/: __init__.py  login.py  product.py
app/main/: forms.py  routes.py  utils.py
app/products/: routes.py  utils.py
app/static/: flash.js  modal.js  styles.css  theme-toggle.js
app/templates/: categories.html  category_form.html  form.html  index.html  layout.html  product.html  products.html
app/templates/errors/: 403.html  404.html  500.html
app/utils/: utils.py
db/: connection.py  init_db.py  models.py  populate_db.py  queries.py
forms/: __init__.py  category.py  product.py
static/: styles.css
templates/: add_category.html  add_product.html  admin_password_form.html  categories.html  edit_category.html  edit_product.html  index.html  layout.html  product.html  products.html
utils/: utils.py
